--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "4.6.0",
     "react-native-keychain": "^7.0.0",
+    "react-native-maps": "^0.29.4",
     "react-native-onesignal": "^4.1.1",
     "react-native-paper": "^4.9.1",
     "react-native-reanimated": "^2.2.0",
