--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^5.11.11",
+    "@react-navigation/drawer": "6.1.4",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.21.1",
@@ -29,7 +30,7 @@
     "react-native-maps": "^0.29.4",
     "react-native-onesignal": "^4.1.1",
     "react-native-paper": "^4.9.1",
-    "react-native-reanimated": "^2.2.0",
+    "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.3.0",
     "react-native-size-matters": "^0.4.0",
