--- a/package.json
+++ b/package.json
@@ -24,18 +24,23 @@
     "react-native-document-picker": "^6.0.4",
     "react-native-dotenv": "^3.0.0",
     "react-native-elements": "^3.4.2",
+    "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "4.6.0",
+    "react-native-image-viewing": "^0.2.2",
     "react-native-keychain": "^7.0.0",
+    "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "^0.29.4",
     "react-native-onesignal": "^4.1.1",
     "react-native-paper": "^4.9.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.2.0",
-    "react-native-screens": "^3.3.0",
+    "react-native-screens": "^3.4.0",
     "react-native-size-matters": "^0.4.0",
     "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-video": "^5.2.0",
+    "react-native-video-controls": "^2.8.1",
     "react-native-webview": "^11.6.5",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
