--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "react": "17.0.2",
-    "react-native": "0.67.2",
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.0.1",
@@ -20,6 +18,9 @@
     "@react-navigation/stack": "^6.0.9",
     "axios": "^0.21.1",
     "i18n-js": "^3.8.0",
+    "ramda": "^0.28.0",
+    "react": "17.0.2",
+    "react-native": "0.67.2",
     "react-native-collapsible": "^1.6.0",
     "react-native-document-picker": "^6.0.4",
     "react-native-dotenv": "^3.0.0",
@@ -50,20 +51,21 @@
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/i18n-js": "^3.8.1",
     "@types/jest": "^26.0.23",
+    "@types/ramda": "^0.28.15",
     "@types/react-native": "^0.66.15",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-babel-module": "^5.3.1",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-test-renderer": "17.0.2",
-    "typescript": "^4.4.4",
-    "@types/i18n-js": "^3.8.1",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-import-resolver-babel-module": "^5.3.1"
+    "typescript": "^4.4.4"
   },
   "resolutions": {
     "@types/react": "^17"
