--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/drawer": "6.1.4",
     "@react-navigation/native": "^6.0.4",
     "@react-navigation/stack": "^6.0.9",
+    "@reduxjs/toolkit": "^1.8.3",
     "axios": "^0.21.1",
     "i18n-js": "^3.8.0",
     "ramda": "^0.28.0",
@@ -44,8 +45,7 @@
     "react-native-video-controls": "^2.8.1",
     "react-native-webview": "^11.6.5",
     "react-redux": "^7.2.4",
-    "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0"
+    "redux": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
