--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,6 +30,6 @@
       </activity>
        <meta-data
       android:name="com.google.android.geo.API_KEY"
-      android:value="AIzaSyCfxwhLuvaMSgYxbsURzH2-RYwrP1E_IJ8"/>
+      android:value="KEY"/>
     </application>
 </manifest>
