feat: react-hook-form provided for auth pages

--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "i18n-js": "^3.8.0",
     "ramda": "^0.28.0",
     "react": "17.0.2",
+    "react-hook-form": "^7.35.0",
     "react-native": "0.67.2",
     "react-native-collapsible": "^1.6.0",
+    "react-native-date-picker": "^4.2.5",
     "react-native-document-picker": "^6.0.4",
     "react-native-dotenv": "^3.0.0",
     "react-native-elements": "^3.4.2",
