--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-screens": "^3.27.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-video": "^5.2.1",
-    "react-native-video-controls": "^2.8.1"
+    "react-native-video-controls": "^2.8.1",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
