--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
     "react-native-size-matters": "^0.4.2",
+    "react-native-vector-icons": "^10.0.2",
     "react-native-video": "^5.2.1",
     "react-native-video-controls": "^2.8.1",
     "react-redux": "^8.1.3"
